code presque final 2

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <title>Panamburger, le burger à la Française</title>
 </head>
@@ -14,7 +14,7 @@
 
     <div class="nav-responsive">
     <ul id="menu-deroulant">
-        <li><img class="logo" src="../images/logo-menu.png" alt="Panamburger">
+        <li><img class="logo" src="images/logo-menu.png" alt="Panamburger">
             <ul>
                 <li><a href="index.html">Notre concept</a></li>
                 <li><a href="nos-burgers.html">Nos burgers</a></li>
@@ -33,7 +33,7 @@
             <ul class="header-nav-buttons-list">
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html">Notre Concept</a></li>
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="nos-burgers.html">Nos Burgers</a></li>
-                <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html"><img class="logo" src="../images/logo-small.png" alt="Panamburger"></a></li>
+                <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html"><img class="logo" src="images/logo-small.png" alt="Panamburger"></a></li>
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="nous-trouver.html">Nous Trouver</a></li>
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-facebook"></i></li>
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-twitter"></i></li>
@@ -41,7 +41,7 @@
             </ul>
         </nav>
         <div class="header-hero-image-home">
-            <img class="header-hero-image-logo" src="../images/logo-hero.png" alt="">
+            <img class="header-hero-image-logo" src="images/logo-hero.png" alt="">
             <h1 class="header-hero-image-title">Le Burger à la Française</h1>
         </div>
     </header>
@@ -49,7 +49,7 @@
     <main class="main-content-container">
         <h2 class="main-content-title">Notre Concept</h2>
         <div class="main-content-section">
-            <img class="main-content-image" src="../images/produits.jpg" alt="nos produits">
+            <img class="main-content-image" src="images/produits.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
                 <h3>Des produits locaux de qualité</h3>
                 <p>Notre idée ? Vous proposer un repas rapide gourmand et convivial grâce à un burger français fait maison, avec des produits locaux. Un produit au goût unique qui associe le meilleur du fast food américain et le meilleur de la cuisine française.</p>
@@ -60,41 +60,38 @@
                 <h3>Du fait-maison</h3>
                 <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
             </div>
-                <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
+                <img class="main-content-image" src="images/savoureux.jpg" alt="nos produits">
         </div>
 
         <div class="main-content-instagram">
             <h2 class="main-content-title main-content-title-instagram"> Suivez nous sur les réseaux sociaux</h2>
             <div class="main-content-instagram-photo">
-                <a href="http://www.instagram.com"><img src="../images/insta1.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta10.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta2.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta16.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta4.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/sandroburger.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta15.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta13.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta8.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/burger11.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/burger9.jpg"></a>
-                <a href="http://www.instagram.com"><img src="../images/insta12.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta1.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta10.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta2.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta16.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta4.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/sandroburger.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta15.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta13.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta8.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/burger11.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/burger9.jpg"></a>
+                <a href="http://www.instagram.com"><img src="images/insta12.jpg"></a>
             </div>
             <!-- INSTAGRAM RESPONSIVE  -->
-<!--
-            <div class="main-content-instagram-slider-container">
-                <div class="main-content-instagram-slider-title">
-                    <h2>Envoyez-nous vos photos avec #panamburger</h2>
+            <div class="main-content-instagram-responsive">
+                <div class="main-content-instagram-responsive-logo1">
+                    <i class="fa fa-chevron-left fa-3x"></i>
                 </div>
-                <figure class="main-content-instagram-slider">
-                    <img src="../images/insta1.jpg" alt="Personne qui mange des burgers">
-                    <img src="../images/insta10.jpg">
-                    <img src="../images/insta16.jpg">
-                    <img src="../images/sandroburger.jpg">
-                    <img src="../images/insta13.jpg">
-                </figure>
+                <div class="main-content-instagram-responsive-logo2">
+                    <i class="fa fa-chevron-right fa-3x"></i>
+                </div>
             </div>
--->
+            ​
+
             <!-- FIN INSTAGRAM RESPONSIVE -->
+
         </div>
      </main>
 
