tentative 1 sur carrousel

--- a/nous-trouver.html
+++ b/nous-trouver.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Panamburger, le burger à la Française</title>
 </head>
 <body>
     <div class="nav-responsive">
         <ul id="menu-deroulant">
-            <li><a class="nav-buttons-links" href="index.html"><img class="logo" src="../images/logo-menu.png" alt="Panamburger"></a>
+            <li><a class="nav-buttons-links" href="index.html"><img class="logo" src="images/logo-menu.png" alt="Panamburger"></a>
                 <ul>
                     <li><a href="index.html">Notre concept</a></li>
                     <li><a href="nos-burgers.html">Nos burgers</a></li>
@@ -31,7 +31,7 @@
             <ul class="header-nav-buttons-list">
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html">Notre Concept</a></li>
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="nos-burgers.html">Nos Burgers</a></li>
-                <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html"><img class="logo" src="../images/logo-small.png" alt="Panamburger"></a></li>
+                <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html"><img class="logo" src="images/logo-small.png" alt="Panamburger"></a></li>
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="nous-trouver.html">Nous Trouver</a></li>
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-facebook"></i></li>
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-twitter"></i></li>
@@ -41,7 +41,7 @@
     </header>
     <main class="main-content-contact">
         <div class="main-content-contact-elements">
-            <img class="main-content-contact-image carte" src="../images/map.png" alt="map paris">
+            <img class="main-content-contact-image carte" src="images/map.png" alt="map paris">
             <div class="adresse">
                 <h2>Nous trouver</h2>
                 <h3>Panamburger</h3>
