--- a/nos-burgers.html
+++ b/nos-burgers.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="nav-responsive">
         <ul id="menu-deroulant">
-            <li><a class="nav-buttons-links" href="index.html"><img class="logo" src="../images/logo-menu.png" alt="Panamburger"></a>
+            <li><a class="nav-buttons-links" href="index.html"><img class="logo" src="images/logo-menu.png" alt="Panamburger"></a>
                 <ul>
                     <li><a href="index.html">Notre concept</a></li>
                     <li><a href="nos-burgers.html">Nos burgers</a></li>
@@ -30,7 +30,7 @@
             <ul class="header-nav-buttons-list">
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html">Notre Concept</a></li>
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="nos-burgers.html">Nos Burgers</a></li>
-                <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html"><img class="logo" src="../images/logo-small.png" alt="Panamburger"></a></li>
+                <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html"><img class="logo" src="images/logo-small.png" alt="Panamburger"></a></li>
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="nous-trouver.html">Nous Trouver</a></li>
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-facebook"></i></li>
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-twitter"></i></li>
@@ -43,7 +43,7 @@
     </header>
     <main class="main-content-container main-content-container-page2">
         <div class="main-content-section">
-            <img  class="main-content-image" src="../images/hamburger4.jpg" alt="nos produits">
+            <img  class="main-content-image" src="images/hamburger4.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
               <h3>Le French touch</h3>
               <p>- Foie Gras <br>- Roquette <br>- Oignons frits</p>
@@ -55,11 +55,11 @@
                 <h3>Le Terroir</h3>
                 <p>- Bleu <br>- Bavette <br>- Echalottes <br>- Mesclun </p>
             </div>
-            <img class="main-content-image" src="../images/hamburger3.jpg" alt="nos produits">
+            <img class="main-content-image" src="images/hamburger3.jpg" alt="nos produits">
         </div>
 
         <div class="main-content-section">
-                 <img  class="main-content-image" src="../images/hamburger5.jpg" alt="nos produits">
+                 <img  class="main-content-image" src="images/hamburger5.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
                 <h3>Le Full Eiffel Tower</h3>
                 <p>-  Cheddar <br>- Oignons <br>- Double Steak <br>- Double Bacon</p>
@@ -71,10 +71,10 @@
                 <h3>Le Green Triomphe</h3>
                 <p>- Avocat <br>- Graines Germées <br>- Steak d'Aubergine</p>
             </div>
-            <img class="main-content-image" src="../images/hamburger1.jpg" alt="nos produits">
+            <img class="main-content-image" src="images/hamburger1.jpg" alt="nos produits">
         </div>
         <div class="main-content-section">
-            <img  class="main-content-image" src="../images/hamburger2.jpg" alt="nos produits">
+            <img  class="main-content-image" src="images/hamburger2.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
                 <h3>Le Paname</h3>
                 <p>-  Tomates Fraiches <br>- Comté <br>- Charolais <br>- Batavia</p>
