--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta property="og:title" content="Panamburger, le burger à la française" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="#" />
+    <meta property="og:url" content="http://yass09.github.io/panamburger/index.html" />
     <meta property="og:image" content="images/tableau.jpg"/>
     <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
