--- a/nos-burgers.html
+++ b/nos-burgers.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <title>Panamburger, le burger à la Française</title>
     <meta name="description" content="Le burger à la française, fait avec des produits locaux de qualité. Le meilleur du fast-food américain rencontre le meilleur de la cuisine française." />
