--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Panamburger, le burger à la Française</title>
     <meta name="description" content="Le burger à la française, fait avec des produits locaux de qualité. Le meilleur du fast-food américain rencontre le meilleur de la cuisine française." />
 </head>
